--- a/configuracao/views/allgroupsView.phtml
+++ b/configuracao/views/allgroupsView.phtml
@@ -1,9 +1,7 @@
 <?php
-$this->gui->opendiv('site_configuracao', 'span10');
-foreach($configuracoes as $gname => $confgrupo){
-    $this->gui->subtitle($gname);
-    foreach($confgrupo as $nm => $link){
-        $this->gui->infotitle("<a href='$link'>$nm</a>");
-    }
-}
+
+$this->gui->opendiv('site_configuracao', 'col-xs-12 col-sm-6 col-md-5 col-lg-4');
+    classes\Component\widget::executeWidgets(array(
+        'site/configuracao/widgets/configMenuWidget' => array(),
+    ));
 $this->gui->closediv();
