--- a/configuracao/views/groupView.phtml
+++ b/configuracao/views/groupView.phtml
@@ -1,7 +1,15 @@
 <?php
 
-echo "<h2>{$grupo['name']}</h2><hr/>";
 
+$this->gui->opendiv('site_configuracao', 'col-xs-12 col-sm-6 col-md-5 col-lg-3 panel panel-default');
+    classes\Component\widget::executeWidgets(array(
+        'site/configuracao/widgets/configMenuWidget' => array(),
+    ));
+$this->gui->closediv();
+
+
+$this->gui->opendiv('site_configuracao', 'col-xs-12 col-sm-6 col-md-7 col-lg-9');
+echo "<h2>{$grupo['name']}</h2><hr/>";
 if(!empty($files)){
     $this->LoadResource('formulario', 'form');
     $this->LoadModel('site/configuracao', 'model');
@@ -27,6 +35,7 @@ if(!empty($files)){
     }
     echo "</div>";
 }
+$this->gui->closediv();
 
 $link = \classes\Classes\Registered::getPluginLocationUrl('site')."/js/grupo.js";
 $this->Html->LoadJs($link);
